# fll

./: .gitignore  404.html  CNAME  README.md  app.py  artifacts.html  dashboard.html  desktop.ini  humans.md  index.html  login.html  logos.html  manifest.json  mkdocs.yml  package-lock.json  package.json  parse.html  poll.html  pyproject.toml  requirements.txt  searchimages.py  view.html
.github/workflows/: jekyll-gh-pages.yml  python-app.yml
assets/: abstract.md  passcode.txt  script.md
deploymentassets/: service.py
docs/: index.md  install.md  licence.md
install/: DRV8825.py  db.py  fll.sh  gpiolibrary.py  index.html  install.sh  photogrammetry_db.py  powermonitor.py  requierments.txt  requirements.txt  service.py  stop.py  vision.py
metadata/: human.json
poll/: index.html
scanner/: BASEV4 x1.stl  BEVELGEARV4 x1.stl  BEVELHOLDERV4 x1.stl  BRIDGEV4 x1.stl  CAMERAMOUNTV4 x1.stl  CAMERAV4 x1.stl  HOLDERENDINGV4 x2.stl  HOLDEREXTENTIONV4 x2.stl  HOLDERPEICE V4 x1.stl  PICASEV4 x1.stl  RINGGEARV4 x1.stl  RINGHOLDERV4 x1.stl  RINGPEICEV4 x5.stl  STRINGHOLDERV4 x1.stl  camera sample model x1.stl  extrusion example model x4.stl  steppermotor example model x2.stl
scannermodels/: base.glb  bevelgear.glb  bevelholder.glb  bridge.glb  camera.glb  cameramount.glb  holderending.glb  holderextention.glb  holderpeice.glb  index.html  picase.glb  ringgear.glb  ringholder.glb  ringpeice.glb  stringholder.glb
site/: CNAME  index.html  search.html
site/credits/: index.html
site/install/: index.html
site/licence/: index.html
site/search/: search_index.json
